--- a/views/message.ejs
+++ b/views/message.ejs
@@ -11,7 +11,7 @@
     <%- include("navbar") %>
     <hr />
     <div class="message-container">
-      <p><span>From: </span><%= message.user %></p>
+      <p><span>From: </span><%= message.username %></p>
       <p><%= message.added %></p>
       <p><%= message.text %></p>
     </div>
